# package-fast

./: .eslintrc.json  .gitignore  Cargo.toml  PACKAGE_FAST_FINAL_SUMMARY.md  README.md  jest.config.js  package-lock.json  package.json  tsconfig.json
.github/ISSUE_TEMPLATE/: release.md
.github/workflows/: release.yml
benchmark-results/: benchmark-results-2025-09-22T22-03-43.215Z.json
benchmark-results/temp/package-fast-large-project-clean-install/: package.json
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/security/: Cargo.toml  README.md
crates/security/src/: audit.rs  integrity.rs  lib.rs  performance.rs  runtime.rs  sandbox.rs  service.rs  vuln_db.rs  vulnerability.rs
crates/security/src/audit/: README.md
crates/security/src/integrity/: README.md
crates/security/src/performance/: README.md
crates/security/src/runtime/: README.md
crates/security/src/service/: README.md
crates/security/src/vulnerability/: README.md
docs/: README.md
docs/api-reference/: cli-commands.md
docs/developer-guides/: contributing.md
docs/reference/: CHANGELOG.md  COMPARATIVE_ANALYSIS.md  DEPLOYMENT_GUIDE.md  core-requirements.md
docs/technical-reference/: architecture.md  performance.md  security.md
docs/tutorials/: plugin-development.md
docs/user-guides/: configuration.md  installation.md  quick-start.md  troubleshooting.md  workspaces.md
scripts/: README.md  build-release.js  install.js  publish.js  release.js
src/: cache.js  cli.ts  config-manager.js  http-client.js  index.ts  logger.js  parallel.js  performance-monitor.js
tests/: index.test.ts
(+8 files in other folders)
