[package]
name = "package-fast-cli"
version = "0.1.0"
edition = "2021"
description = "CLI interface for Package Fast"
authors = ["Package Fast Team"]
license = "MIT"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
package-fast-core = { path = "../core" }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

[[bin]]
name = "package-fast"
path = "src/main.rs"