[package]
name = "package-fast-core"
version = "0.1.0"
edition = "2021"
description = "Core components for Package Fast"
authors = ["Package Fast Team"]
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
semver = "1.0"
tracing = "0.1"
reqwest = { version = "0.11", features = ["json"] }