[package]
name = "package-fast-security"
version = "0.1.0"
edition = "2021"
description = "Security module for Package Fast - integrity verification, vulnerability scanning, and runtime protection"
authors = ["Package Fast Team"]
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
reqwest = { version = "0.11", features = ["json"] }
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
csv = "1.1"

[dev-dependencies]
tempfile = "3.0"